# lcshbench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
results/: ci-dev2k.md  dataset-stats-v1.0.md  leaderboard-v1.0.md  leakage-v22.txt  marc-leakage-audit.md  v2.1-reextract.md
results/runs/: frequency_v22_dev2k.score.json  gen_deepseek_v22_dev2k.score.json  retrieval_embgemma-ft_v22_dev2k.score.json  retrieval_embgemma-stock_v22_dev2k.score.json  retrieval_text-embedding-3-large_v22_dev2k.score.json  retrieval_text-embedding-3-small_v22_dev2k.score.json  sel_deepseek_v22_dev2k.score.json
scripts/: build_finetune_pairs.py  build_release_v1.py  concordance_ab.py  dump_consensus_parquet.py  export_onnx.py  extract_v2board.py  hf_pull.sh  hf_push_indices.py  hf_stage_bundle.py  merge_adapter.py  rebuild_v22.sh  run_benchmark_v22.sh  run_te3_v22.sh  run_v22_job.py  three_catalog_agreement.py  three_catalog_agreement_population.py  train_embedder.py  wait_upload_te3large.sh
src/lcsh_benchmark/: __init__.py  audit_leakage.py  build.py  chat_backend.py  ci.py  clean.py  consensus.py  gt_tiers.py  (+9 more)
tests/: test_assemble.py  test_audit_leakage.py  test_backends.py  test_binary_marc.py  test_build.py  test_build_manifest.py  test_build_v2.py  test_chat_backend.py  test_ci.py  test_clean.py  test_composition.py  test_concordance.py  test_consensus.py  test_consensus_parity.py  test_embed_index.py  test_frequency.py  test_generate.py  test_gt_tiers.py  test_leaderboard.py  test_ledger.py  test_llm_rerank.py  test_load.py  test_marc_index.py  test_marc_index_a2_reconstruction.py  test_marc_index_enriched.py  test_marc_index_h2_filter.py  test_marc_index_inputs.py  test_marc_index_lc_class.py  test_marc_index_material.py  test_marc_index_vernacular.py  test_match.py  test_match_independence.py  test_metrics_rank.py  test_metrics_set.py  test_normalize.py  test_rerank.py  test_rerank_backends.py  test_retrieve.py  test_run.py  test_sample.py  (+15 more)
(+25 files in other folders)
